@@ -54,6 +54,9 @@ options:
     --transparent
             Make the background transparent. Only really useful for screenshots.
 
+    --start-date YYYY-MM-DD
+            Start with first log entry on or after the supplied date.
+
     -p, --start-position POSITION
             Begin at some position in the log (between 0.0 and 1.0 or 'random').
 
