@@ -28,6 +28,8 @@ Windowed
 \fB\-\-transparent\fR
 Make the background transparent. Only really useful for screenshots.
 .TP
+\fB     \-\-start\-date YYYY\-MM\-DD\fR
+Start with first log entry on or after the supplied date.
 \fB\-p, \-\-start\-position POSITION\fR
 Begin at some position in the log (between 0.0 and 1.0 or 'random').
 .TP
