@@ -25,12 +25,10 @@
 class GourceShell : public SDLApp {
 
     Gource* gource;
-
-    bool shutdown;
     bool next;
 
     TextureResource* transition_texture;
-    float  transition_interval; 
+    float  transition_interval;
 
     FrameExporter* exporter;
     ConfFile* conf;
@@ -47,9 +45,9 @@ public:
     void resize(int width, int height);
 
     void toggleFullscreen();
-    
+
     void quit();
-        
+
     void keyPress(SDL_KeyboardEvent *e);
     void mouseMove(SDL_MouseMotionEvent *e);
     void mouseClick(SDL_MouseButtonEvent *e);
